syntax = "proto3";
import "public.proto";
package fixbug;

option cc_generic_services = true;


message GetFriendsListRequest
{
    int32 userid = 1;
}
message Friends{
    int32 userid = 1;
    bytes friendname =2;
    bytes online = 3;
}

message GetFriendsListResponse
{
    ResultCode result = 1;
    repeated Friends friends = 2;
}
message AddfriendRequest{
    int32 userid = 1;
    int32 friendid = 2;
}
message AddfriendResponse{
    ResultCode result = 1;
}


// 好友模块
service FiendServiceRpc
{
    rpc GetFriendsList(GetFriendsListRequest) returns(GetFriendsListResponse);
    rpc AddFriend(AddfriendRequest) returns(AddfriendResponse);
}
